# DLLExperimentation

./: .gitignore  Cargo.toml  generate_headers.bat  readme.md
CppArithmetic/: CppArithmetic.sln  CppArithmetic.vcxproj  dllmain.cpp
CppImport/: CppImport.cpp  CppImport.vcxproj  CppImport.vcxproj.filters
src/: main.rs
src/arithmetic/: multiplication.rs
