[package]
name = "dll_experimentation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "console"
path = "src/main.rs"

[lib]
crate-type = ["staticlib"]
name = "dll_experimentation"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"
